[package]
name = "sorting-algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "sort_benchmark"
harness = false

[dependencies]
rand = "0.8"
tui = "0.19"
crossterm = "0.25"
